--- a/Changes
+++ b/Changes
@@ -1,10 +1,10 @@
-0.002   2018-02-05 (PERLANCAR)
+0.002   2018-02-05  Released-By: PERLANCAR
 
         - No functional changes.
 
         - Minor fix to documentation.
 
 
-0.001   2018-02-05 (PERLANCAR)
+0.001   2018-02-05  Released-By: PERLANCAR
 
         - First release.
